--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   device_info_plus: ^10.0.0
   font_awesome_flutter: ^10.7.0
   local_auth: ^2.1.7
+  share_plus: ^7.2.2
+  connectivity_plus: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +86,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/logo/seChat_cleanLogo.png
     - assets/logo/seChat_Logo.png
     - assets/logo/seChat_SplashLogo.png
   # assets:
