--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -16,62 +16,80 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0'
+          flutter-version: '3.29.2'
+          channel: 'stable'
 
-      - name: Install dependencies
+      - name: Get dependencies
         run: flutter pub get
+        working-directory: ./sechat_app
 
-      - name: Build Android APK
-        run: flutter build apk --release
+      - name: Run tests
+        run: flutter test
+        working-directory: ./sechat_app
 
-      - name: Build iOS
+      - name: Build Android AAB
+        run: flutter build appbundle --release
+        working-directory: ./sechat_app
+
+      - name: Build iOS (no codesign)
         run: flutter build ios --release --no-codesign
+        working-directory: ./sechat_app
 
-      - name: Upload Android APK
+      - name: Upload Android AAB
         uses: actions/upload-artifact@v4
         with:
-          name: app-release.apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: app-release.aab
+          path: sechat_app/build/app/outputs/bundle/release/app-release.aab
 
       - name: Upload iOS build
         uses: actions/upload-artifact@v4
         with:
           name: ios-release
-          path: build/ios/iphoneos/Runner.app
+          path: sechat_app/build/ios/iphoneos/Runner.app
 
   deploy-android:
     needs: build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
-      - name: Download APK
+      
+      - name: Download AAB
         uses: actions/download-artifact@v4
         with:
-          name: app-release.apk
-          path: .
+          name: app-release.aab
+          path: ./
+      
       - name: Upload to Google Play Internal Testing
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
-          packageName: com.yourcompany.sechat
-          releaseFiles: app-release.apk
+          packageName: com.strapblaque.sechat
+          releaseFiles: app-release.aab
           track: internal
+          status: completed
+          inAppUpdatePriority: 2
+          userFraction: 1.0
+          whatsNewDirectory: distribution/whatsnew
+          mappingFile: sechat_app/build/app/outputs/mapping/release/mapping.txt
 
   deploy-ios:
     needs: build
     runs-on: macos-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
+      
       - name: Download iOS build
         uses: actions/download-artifact@v4
         with:
           name: ios-release
-          path: .
-      # Uncomment and configure for TestFlight deployment:
-      # - name: Upload to TestFlight
-      #   uses: apple-actions/upload-testflight-build@v1
-      #   with:
-      #     app-path: ./Runner.app
-      #     issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
-      #     api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
-      #     api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+          path: ./
+      
+      - name: Upload to TestFlight
+        uses: apple-actions/upload-testflight-build@v1
+        with:
+          app-path: ./Runner.app
+          issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+          api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+          api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
