--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -8,15 +8,8 @@
     <string>export</string>
     <key>method</key>
     <string>app-store</string>
-    <key>provisioningProfiles</key>
-    <dict>
-        <key>com.strapblaque.sechat</key>
-        <string>SeChat App Store</string>
-    </dict>
-    <key>signingCertificate</key>
-    <string>Apple Distribution</string>
     <key>signingStyle</key>
-    <string>manual</string>
+    <string>automatic</string>
     <key>stripSwiftSymbols</key>
     <true/>
     <key>teamID</key>
