--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -150,8 +150,7 @@ jobs:
             --export-options-plist=ios/ExportOptions.plist \
             --build-name=1.0.1 \
             --build-number=2 \
-            --verbose \
-            -- -allowProvisioningUpdates
+            --verbose
 
       - name: Upload Android AAB
         uses: actions/upload-artifact@v4
