--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ app.*.map.json
 certificates/
 *.p12
 *.mobileprovision
+
+# Android signing (never commit these!)
+android/key.properties
+android/app/app-release-key.jks
+*.jks
