--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             if [ -n "$ANDROID_KEYSTORE_BASE64" ]; then
               echo "Setting up Android release signing..."
               echo "$ANDROID_KEYSTORE_BASE64" | base64 -d > android/app/release.keystore
-              cat > android/key.properties << EOF
+              cat > android/key.properties << 'EOF'
             storeFile=release.keystore
             storePassword=$ANDROID_STORE_PASSWORD
             keyAlias=$ANDROID_KEY_ALIAS
