--- a/ios/exportOptions.plist
+++ b/ios/exportOptions.plist
@@ -2,23 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>compileBitcode</key>
-    <false/>
-    <key>destination</key>
-    <string>export</string>
-    <key>method</key>
-    <string>app-store</string>
-    <key>signingStyle</key>
-    <string>automatic</string>
-    <key>stripSwiftSymbols</key>
-    <true/>
-    <key>teamID</key>
-    <string>8A6FXCA4R9</string>
-    <key>thinning</key>
-    <string>&lt;none&gt;</string>
-    <key>uploadBitcode</key>
-    <false/>
-    <key>uploadSymbols</key>
-    <true/>
+  <key>method</key>
+  <string>app-store</string>
+  <key>teamID</key>
+  <string>8A6FXCA4R9</string>
+  <key>provisioningProfiles</key>
+  <dict>
+    <key>com.strapblaque.sechat</key>
+    <string>SeChat App Store</string>
+  </dict>
+  <key>compileBitcode</key>
+  <false/>
+  <key>signingStyle</key>
+  <string>manual</string>
+  <key>thinning</key>
+  <string>&lt;none&gt;</string>
 </dict>
 </plist> 
