--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -173,7 +173,13 @@ jobs:
         run: |
           VERSION_CODE=$((1000 + $GITHUB_RUN_NUMBER))
           echo "Before:" && cat android/app/build.gradle.kts
-          sed -i "s/^\s*versionCode\s*=\s*[0-9]\+/versionCode = $VERSION_CODE/" android/app/build.gradle.kts
+          awk -v vcode="$VERSION_CODE" '{
+            if ($1 ~ /versionCode/) {
+              print "        versionCode = " vcode
+            } else {
+              print $0
+            }
+          }' android/app/build.gradle.kts > android/app/build.gradle.kts.tmp && mv android/app/build.gradle.kts.tmp android/app/build.gradle.kts
           echo "Set versionCode to $VERSION_CODE"
           echo "After:" && cat android/app/build.gradle.kts
 
