--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,8 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC
+org.gradle.daemon=false
+org.gradle.parallel=true
+org.gradle.configureondemand=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.suppressUnsupportedCompileSdk=35
+android.enableR8.fullMode=true
