working on intergreating sessioon messenger socket implementation

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSCameraUsageDescription</key>
+		<string>This app needs camera access to take photos for QR code scanning.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app needs photo library access to select images for QR code scanning.</string>
 	</dict>
 </plist>
