--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   # Network and HTTP
   http: ^1.4.0
   connectivity_plus: ^6.0.3
+  web_socket_channel: ^2.4.0
   
   # Utilities
   uuid: ^4.0.0
@@ -71,6 +72,7 @@ dependencies:
   pigeon: ^13.0.0
   qr: ^3.0.2
   screenshot: ^3.0.0
+  socket_io_client: ^3.1.2
 
 dev_dependencies:
   flutter_test:
