Add iOS encryption declaration to Info.plist
- Added ITSAppUsesNonExemptEncryption=false to Info.plist
- Declares that app only uses standard encryption algorithms
- Prevents App Store Connect encryption documentation prompt
- Ensures smooth TestFlight and App Store submissions

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,7 @@
 		<string>This app needs camera access to take photos for QR code scanning.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>This app needs photo library access to select images for QR code scanning.</string>
+		<key>ITSAppUsesNonExemptEncryption</key>
+		<false/>
 	</dict>
 </plist>
